[rheader] clean specific style + fix spacing with notice top fixed

--- a/src/modules/jumbotron-slider/_style.scss
+++ b/src/modules/jumbotron-slider/_style.scss
@@ -6,7 +6,7 @@
   text-decoration: none;
   top: 0;
   width: 100%;
-  z-index: 1050;
+  z-index: 750;
 
   &.closed {
     top: -43rem;
