--- a/src/modules/notice/_style.scss
+++ b/src/modules/notice/_style.scss
@@ -92,7 +92,11 @@
   }
   &.fixed {
     position: fixed;
-    z-index: 1000;
+    z-index: 700;
+
+    body.rheader-mobile-nav-open & {
+      z-index: 300;
+    }
   }
 
   // text
