--- a/src/modules/rheader/_variables.scss
+++ b/src/modules/rheader/_variables.scss
@@ -4,11 +4,8 @@ $rheader-medium-max: 1160px;
 $rheader-large-min:  $rheader-medium-max + 1px;
 $rheader-large-max:  1370px;
 
+$notice-height: 60px;
 $rheader-height-small:  60px;
 $rheader-height-medium: 60px;
 $rheader-height-large:  60px;
 $rheader-height-large-extended: $rheader-height-large + 20px;
-
-$red-color-jo: #ff0514;
-$red-color-jo-variant: #ed1421;
-$purple-color-jo: #e6007e;
